tests/ui/cve_2020_35881_dyn_derive/dyn_derive.stderr
error: wrong assumption of fat pointer layout
  --> tests/ui/cve_2020_35881_dyn_derive/dyn_derive.rs:4:24
   |
LL |         let data_ptr = &mut fat_ptr as *mut *const T as *mut *mut ();
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ptr transmute here
...
LL |             *data_ptr = f(self);
   |                         ------- try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers
   = note: `#[deny(rpl::wrong_assumption_of_fat_pointer_layout)]` on by default

error: wrong assumption of fat pointer layout
  --> tests/ui/cve_2020_35881_dyn_derive/dyn_derive.rs:14:24
   |
LL |         let data_ptr = &mut fat_ptr as *mut *const T as *mut *mut ();
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ptr transmute here
...
LL |             *data_ptr = f(self.as_ref());
   |                         ---------------- try to get data ptr from first 8 bytes here
   |
   = help: the Rust Compiler does not expose the layout of fat pointers

error: aborting due to 2 previous errors

